--- a/src/app/home/layout/layout.component.html
+++ b/src/app/home/layout/layout.component.html
@@ -1,8 +1,8 @@
-<main  class="w-full flex-col md:flex-row relative flex ct-docs-disable-sidebar-content overflow-x-hidden " >
+<main  class="w-full flex-col md:flex-row  flex ct-docs-disable-sidebar-content overflow-x-hidden " >
     <section class="w-64">   
         <app-sidebar></app-sidebar> 
     </section>
-    <section class="w-full bg-slate-100 " >
+    <section class="w-full" >
         <router-outlet></router-outlet>
     </section>
     
