--- a/src/app/home/page/dashboard/dashboard.component.html
+++ b/src/app/home/page/dashboard/dashboard.component.html
@@ -1,137 +1,108 @@
-<app-title  [text]="'Dashboard'" ></app-title>
+<app-title [text]="'Dashboard'"></app-title>
 
-<div class="container mx-auto -mt-10">
-    <div class="bg-white py-5 sm:py-3">
-        <div class="mx-auto max-w-7xl px-6 lg:px-8">
-          <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-              <dt class="text-base leading-7 text-gray-600">Transactions every 24 hours</dt>
-              <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">44 million</dd>
-            </div>
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-              <dt class="text-base leading-7 text-gray-600">Assets under holding</dt>
-              <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">$119 trillion</dd>
-            </div>
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-              <dt class="text-base leading-7 text-gray-600">New users annually</dt>
-              <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">46,000</dd>
-            </div>
-          </dl>
+<div class="w-11/12 mx-auto -mt-10 ">
+  <div class="flex   flex-wrap  bg-graddient-to-r from-sky-600 to-cyan-400 mt-5">
+    <app-card-header   titulo="Ventas" img="assets/beneficio-financiero.png" valor="3333"
+      class="w-full px-2   my-5  md:basis-1/4" />
+      <app-card-header titulo="Ventas" img="assets/beneficio-financiero.png" valor="3333"
+      class="w-full px-2 my-5 md:basis-1/4" />
+      <app-card-header titulo="Ventas" img="assets/beneficio-financiero.png" valor="3333"
+      class="w-full px-2 my-5 md:basis-1/4" />
+
+    <app-card-header titulo="Pedidos" img="assets/compras.png" valor="3333" class="w-full px-3 my-5 md:basis-1/4" />
+  </div>
+
+  <div class=" mt-10  flex items-stretch flex-col md:flex-row">
+    <!--  <div class="basis-1/4">  -->
+    <app-card-sm class="flex-1 basis-1/4 block h-full"  titulo="Ventas Diario">
+
+      <canvas class="mt-3" id="canvas">{{chart}}</canvas>
+
+    </app-card-sm>
+    <!-- </div> -->
+
+    <app-card-sm titulo="Ventas Mensuales">
+      <canvas  id="chartLine" >{{chartLine}}</canvas>
+    </app-card-sm>
+
+    <app-card-sm titulo="Ventas por vendedor">
+      <canvas  id="chartLine" >{{chartLine}}</canvas>
+    </app-card-sm>
+
+    <app-card-sm titulo="Ventas por tienda">
+      <canvas  id="chartLine" >{{chartLine}}</canvas>
+    </app-card-sm>
+
+ 
+
+
+
+  </div>
+  <div class=" mt-10 flex flex-col md:flex-row ">
+
+    <app-card-md class="basis-1/3" titulo="Grafica Dona">
+      <div class="flex-auto" > 
+        <div class="relative h-350-px">
+          <canvas  id="chartDoughnut"></canvas>
         </div>
       </div>
+    
 
-      <div class=" mt-10 flex flex-row" >
-    <div class="basis-1/4">
-        <div class="flex flex-col bg-white border shadow-sm rounded-xl dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
-            <div class="p-4 md:p-7">
-              <h3 class="text-lg font-bold text-gray-800 dark:text-white">
-                Card title
-              </h3>
-              <p class="mt-2 text-gray-500 dark:text-neutral-400">
-                With supporting text below as a natural lead-in to additional content.
-              </p>
-              <a class="mt-3 inline-flex items-center gap-x-1 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400" href="#">
-                Card link
-                <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="m9 18 6-6-6-6"></path>
-                </svg>
-              </a>
-            </div>
-          </div>
-    </div>
-    <div class=" ml-5 basis-1/4">
-        <div class="flex flex-col bg-white border shadow-sm rounded-xl dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
-            <div class="p-4 md:p-7">
-              <h3 class="text-lg font-bold text-gray-800 dark:text-white">
-                Card title
-              </h3>
-              <p class="mt-2 text-gray-500 dark:text-neutral-400">
-                With supporting text below as a natural lead-in to additional content.
-              </p>
-              <a class="mt-3 inline-flex items-center gap-x-1 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400" href="#">
-                Card link
-                <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="m9 18 6-6-6-6"></path>
-                </svg>
-              </a>
-            </div>
-          </div>
-    </div>
-    <div class="  ml-5 basis-1/4">
-        <div class="flex flex-col bg-white border shadow-sm rounded-xl dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
-            <div class="p-4 md:p-7">
-              <h3 class="text-lg font-bold text-gray-800 dark:text-white">
-                Card title
-              </h3>
-              <p class="mt-2 text-gray-500 dark:text-neutral-400">
-                With supporting text below as a natural lead-in to additional content.
-              </p>
-              <a class="mt-3 inline-flex items-center gap-x-1 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400" href="#">
-                Card link
-                <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="m9 18 6-6-6-6"></path>
-                </svg>
-              </a>
-            </div>
-          </div>
-    </div>
-    <div class=" ml-5 basis-1/4">
-        <div class="flex flex-col bg-white border shadow-sm rounded-xl dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
-            <div class="p-4 md:p-7">
-              <h3 class="text-lg font-bold text-gray-800 dark:text-white">
-                Card title
-              </h3>
-              <p class="mt-2 text-gray-500 dark:text-neutral-400">
-                With supporting text below as a natural lead-in to additional content.
-              </p>
-              <a class="mt-3 inline-flex items-center gap-x-1 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400" href="#">
-                Card link
-                <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="m9 18 6-6-6-6"></path>
-                </svg>
-              </a>
-            </div>
-          </div>
-    </div>
-      </div>
-      <div class=" mt-10 flex flex-row" >
+    </app-card-md>
+   
+    <app-card-md class="basis-1/3"  titulo="Graica Pie">
+     <canvas  id="chartPie" ></canvas> 
+    </app-card-md>
 
-        <div class="basis-1/2 px-3">
-            <div class="flex flex-col bg-white border shadow-sm rounded-xl dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
-                <div class="p-4 md:p-7">
-                  <h3 class="text-lg font-bold text-gray-800 dark:text-white">
-                    Card title
-                  </h3>
-                  <p class="mt-2 text-gray-500 dark:text-neutral-400">
-                    With supporting text below as a natural lead-in to additional content.
-                  </p>
-                  <a class="mt-3 inline-flex items-center gap-x-1 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400" href="#">
-                    Card link
-                    <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="m9 18 6-6-6-6"></path>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-        </div>
-        <div class=" basis-1/2 px-3">
-            <div class="flex flex-col bg-white border shadow-sm rounded-xl dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70 ">
-                <div class="p-4 md:p-7">
-                  <h3 class="text-lg font-bold text-gray-800 dark:text-white">
-                    Card title
-                  </h3>
-                  <p class="mt-2 text-gray-500 dark:text-neutral-400">
-                    With supporting text below as a natural lead-in to additional content.
-                  </p>
-                  <a class="mt-3 inline-flex items-center gap-x-1 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400" href="#">
-                    Card link
-                    <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="m9 18 6-6-6-6"></path>
-                    </svg>
-                  </a>
-                </div>
-              </div>
+    <app-card-md   class="basis-1/3 " >
+      <div   class="flex flex-col h-96">
+        <div class="-m-1.5 overflow-x-auto">
+          <div class="p-1.5 min-w-full inline-block align-middle">
+            <div class="overflow-hidden">
+              <table class=" divide-y divide-gray-200 ">
+                <thead>
+                  <tr>
+                    <th scope="col" class="px-6 py-3 text-start text-xs font-medium  uppercase ">Name</th>
+                    <th scope="col" class="px-6 py-3 text-start text-xs font-medium  uppercase ">Age</th>
+                    <th scope="col" class="px-6 py-3 text-start text-xs font-medium  uppercase ">Address</th>
+                    <th scope="col" class="px-6 py-3 text-end text-xs font-medium  uppercase ">Action</th>
+                  </tr>
+                </thead>
+                <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+                  <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800  ">John Brown</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">45</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800  ">New York No. 1 Lake Park</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
+                      <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400">Delete</button>
+                    </td>
+                  </tr>
+      
+                  <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800  ">Jim Green</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800  ">27</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800  ">London No. 1 Lake Park</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
+                      <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400">Delete</button>
+                    </td>
+                  </tr>
+      
+                  <tr>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800  ">Joe Black</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800  ">31</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800  ">Sidney No. 1 Lake Park</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
+                      <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400">Delete</button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
+    </app-card-md>
+   
+  </div>
 
 </div>
